Added images for templates

--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>tuktuk - Boxes Example</title>
+    <title>tuktuk - Application Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="../../package/tuktuk.css">
     <link rel="stylesheet" href="../../package/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../../package/tuktuk.icons.css">
+    <style>
+        aside > footer img {
+          height: 16px;
+          position: relative;
+          top: 5px;
+          left: 2px; }
+    </style>
 </head>
 <body data-tuktuk="boxes">
     <aside id="menu" class="absolute column_3">
@@ -73,11 +80,12 @@
                 <a href="#"><span class="icon user"></span>TAGS<span>(160)</span></a>
             </nav>
         </article>
-        <footer class="text center">
-            Handcrafted by <a href="#" class="text bold">tapquo</a>
+        <footer class="bck darkest text center">
+            Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a>
         </footer>
     </aside>
 
+    <!--
     <aside class="column_3">
         <header class="text center bck theme">
             <div class="inline on-left">
@@ -124,6 +132,7 @@
             Handcrafted by <a href="#" class="text bold">tapquo</a>
         </footer>
     </aside>
+    -->
 
     <section>
         <header>
