--- a/site/examples/blog.html
+++ b/site/examples/blog.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="../../package/tuktuk.theme.css">
     <link rel="stylesheet" href="../../package/tuktuk.icons.css">
     <style>
+      body > footer img {
+          height: 18px;
+          position: relative;
+          top: 5px;
+          left: 2px; }
+
         div.img.avatar {
             height: 46px;
             width: 46px;
@@ -111,19 +117,19 @@
         </div>
     </section>
 
-    <footer class="bck dark">
-        <div class="row color white">
+    <footer class="bck dark padding">
+        <div class="row margin-top margin-bottom">
             <div class="column_5">
-                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="color white">tapquo</a></p>
-                We're a  user experiences company located in <span class="text normal">Bilbao</span>, SP.
+                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
+                We're a  user experiences company located in <span class="text normal">Bilbao</span>, ES.
             </div>
             <div class="column_4">
                 <p class="text bold big">Join the team!</p>
-                Let us know how you're!<a href="mailto:hello@tapquo.com?subject=job" class="color theme"> Get in touch</a>
+                Let us know how you're! <a href="mailto:hello@tapquo.com?subject=job" class="text underline color theme">Get in touch</a>
             </div>
             <div class="column_3">
                 <p class="text bold big">Need some help?</p>
-                For quick answers or help <a href="https://twitter.com/soyjavi" target="_blank" class="color theme">follow me</a>
+                For quick answers or help <a href="https://twitter.com/tapquo" target="_blank" class="text underline color theme">follow us</a>
             </div>
         </div>
     </footer>
