--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../../package/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../../package/tuktuk.icons.css">
+    <style>
+        body > footer img {
+          height: 18px;
+          position: relative;
+          top: 5px;
+          left: 2px; }
+    </style>
 </head>
 <body class="text thin">
 
@@ -101,18 +108,18 @@
     </section>
 
     <footer class="bck light padding">
-        <div class="row color">
+        <div class="row margin-top margin-bottom">
             <div class="column_5">
-                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="color theme">tapquo</a></p>
-                We're a  user experiences company located in <span class="text normal">Bilbao</span>, SP.
+                <p class="text bold big">Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a></p>
+                We're a  user experiences company located in <span class="text normal">Bilbao</span>, ES.
             </div>
             <div class="column_4">
                 <p class="text bold big">Join the team!</p>
-                Let us know how you're!<a href="mailto:hello@tapquo.com?subject=job" class="color theme"> Get in touch</a>
+                Let us know how you're! <a href="mailto:hello@tapquo.com?subject=job" class="text underline color theme">Get in touch</a>
             </div>
             <div class="column_3">
                 <p class="text bold big">Need some help?</p>
-                For quick answers or help <a href="https://twitter.com/soyjavi" target="_blank" class="color theme">follow me</a>
+                For quick answers or help <a href="https://twitter.com/tapquo" target="_blank" class="text underline color theme">follow us</a>
             </div>
         </div>
     </footer>
